--- a/sequentialTestingApp.Rmd
+++ b/sequentialTestingApp.Rmd
@@ -17,7 +17,7 @@ library(gsDesign)
 library(formattable)
 ```
 
-```{r testDesignFunction, include=FALSE}
+```{r testFunctions, include=FALSE}
 createTest <- function(a,b,c,d,e,f,g) {
       alph = 1 - a/100
       pwr = b/100
@@ -90,6 +90,10 @@ createTest <- function(a,b,c,d,e,f,g) {
       return(finalDesign)
 
 }
+
+getz <- function (a,b,c,d,e) {
+  round(-testBinomial(x1=a, x2=b, n1=c, n2=d, delta0 = e), digits = 2)
+}
 ```
 
 #### Design and execute a frequentist sequential test using this handy calculator.
@@ -107,6 +111,17 @@ uiOutput('fixedLink')
 ```{r quickLoadUtilities, include=FALSE}
 # FIXED LINK OUTPUT ----
   output$fixedLink <- renderUI({
+    a <- function () {
+      b <- ""      
+      try ({for (i in 1:length(reactiveResultsVars$rslt)) {
+        d <- reactiveResultsVars$rslt[i]
+        c <- paste(d[[1]], collapse = "-")
+        b <- if (nchar(b) > 1) paste(b,c, sep = ";") else c
+      }
+      })
+      return (b)
+    }
+    
     div(class="fixedLinkRow",
         "Current configuration shortcut:",
     paste(
@@ -120,6 +135,7 @@ uiOutput('fixedLink')
       input$checknum,
       input$conversions,
       input$dayNum,
+      a(),
       sep = ","
     ))
   })
@@ -137,7 +153,20 @@ uiOutput('fixedLink')
     updateNumericInput(session, 'checknum', value = shortcutList[8])
     updateNumericInput(session, 'conversions', value = shortcutList[9])
     updateNumericInput(session, 'dayNum', value = shortcutList[10])
-    
+    r1 <- strsplit(shortcutList[11],";", fixed = TRUE)
+    r2 <- r1[[1]]
+    r3 <- list()
+    r4 <- list()
+    for (i in 1:length(r2)) {
+      r3 <- strsplit(r2[i],"-",fixed = TRUE)
+      r3 <- c(r3[[1]])
+      print(r3[1])
+      rl <- paste0("checkpoint",r3[1])
+      r4[[rl]] <- r3
+    }
+    reactiveResultsVars$rslt <- r4
+    print(r4)
+
   })
 ```
 
@@ -149,7 +178,7 @@ Enter your desired `confidence level`. This is ($1 - \alpha$) where $\alpha$ is 
 
 ```{r}
 numericInput("alpha",
-             label = NULL, value = 95, step = 5)
+             label = NULL, value = 95, min = 50, max = 99.9, step = 5)
 
 ```
 
@@ -160,7 +189,7 @@ numericInput(
   label = NULL,
   value = 80,
   min = 1,
-  max = 100,
+  max = 99,
   step = 5
 )
 ```
@@ -288,9 +317,9 @@ observeEvent(c(input$alpha, input$pwr, input$cvra, input$nonf, input$mde, input$
   reactiveDesignVars$table$upper <- testDesign$upper$bound
 })
 
-output$fixedN <- renderText(round(reactiveDesignVars$fixedn))
+output$fixedN <- renderText({round(reactiveDesignVars$fixedn)})
 output$fixedDays <- renderText({round(reactiveDesignVars$fixedn/(input$traff/input$dayNum))})
-output$seqN <- renderText(round(reactiveDesignVars$seqn))
+output$seqN <- renderText({round(reactiveDesignVars$seqn)})
 output$maxDays <- renderText({round(reactiveDesignVars$seqn/(input$traff/input$dayNum))})
 output$diff <- renderText({round((reactiveDesignVars$seqn/reactiveDesignVars$fixedn-1)*100)})
 # Probably need to make the plot a UI output so can be customized/styled in here better
@@ -363,10 +392,10 @@ div(class='cent',
 
 div(class='cent',
   div(class='three-c',
-      numericInput("aConversions", label = NULL, value = "")
+      numericInput("aConversions", label = NULL, value = "100", step = 10)
       ),
   div(class='three-c',
-      numericInput("aTraffic", label = NULL, value = "")
+      numericInput("aTraffic", label = NULL, value = "1000", step = 100)
       ),
   div(class='three-c',
       textOutput("aRate", inline = TRUE)
@@ -391,11 +420,11 @@ div(
   class = 'cent',
   div(class = 'three-c',
       numericInput(
-        "bConversions", label = NULL, value = ""
+        "bConversions", label = NULL, value = "110", step = 10
       )),
   div(class = 'three-c',
       numericInput(
-        "bTraffic", label = NULL, value = ""
+        "bTraffic", label = NULL, value = "1000", step = 100
       )),
   div(class = 'three-c',
       textOutput("bRate", inline = TRUE))
@@ -429,7 +458,7 @@ div(class = "cent",
     div(class = "two-c", actionLink("addResults", "Add checkpoint results")))
 ```
 
-```{r resultsOutputs}
+```{r resultsOutputs, include=FALSE}
 output$checkSelect <- renderUI({
   selectInput("checkpoint", NULL, choices = seq(1,input$checknum), selected = 1)
 })
@@ -445,7 +474,9 @@ output$rateDiff <- renderText({
   paste0(diff,"%")
   })
 
-output$zscore <- renderText({
+reactiveResultsVars <- reactiveValues(z = NULL)
+
+observeEvent(c(input$aConversions, input$bConversions, input$aTraffic, input$bTraffic),{
   req(input$aConversions > 1)
   req(input$bConversions > 1)
   req(input$aTraffic > 10)
@@ -457,18 +488,56 @@ output$zscore <- renderText({
   d <- input$bTraffic
   e <- if (input$tls == 3) input$nonf/100 else 0
   
-  round(-testBinomial(x1=a, x2=b, n1=c, n2=d, delta0 = e), digits = 2)
+  reactiveResultsVars$z <- getz(a,b,c,d,e)
+  
 })
+
+output$zscore <- renderText({
+  req(reactiveResultsVars$z != 0)
+  reactiveResultsVars$z})
 
 output$proportion <- renderText({
   req(input$aConversions > 1)
   req(input$bConversions > 1)
   req(input$aTraffic > 10)
   req(input$bTraffic > 10)
-  (round(input$aTraffic + input$bTraffic)/reactiveDesignVars$seqn)
+  nprop <- (round(100*(input$aTraffic + input$bTraffic)/reactiveDesignVars$seqn))
+  paste0(nprop,"%")
   })
 
+observeEvent(input$addResults, {
+  rownum <- paste0("checkpoint",input$checkpoint)
+  zadd <- reactiveResultsVars$z
+  rsltList <- c(input$checkpoint,input$aConversions,input$aTraffic,input$bConversions,input$bTraffic,zadd)
+  
+  reactiveResultsVars$rslt[[rownum]] <- rsltList
+})
+
+observeEvent(input$checkpoint, {
+  try({
+  for (i in 1:length(reactiveResultsVars$rslt)) {
+      d <- reactiveResultsVars$rslt[i]
+      a <- d[[1]][1]
+      if (!is.null(a) && a == input$checkpoint) {
+        updateNumericInput(session,"aConversions", value = d[[1]][2])
+        updateNumericInput(session,"aTraffic", value = d[[1]][3])
+        updateNumericInput(session,"bConversions", value = d[[1]][4])
+        updateNumericInput(session,"aTraffic", value = d[[1]][5])
+      }
+      
+  }
+  })
+}, ignoreInit = TRUE)
+
+# output$test <- renderText({
+#   paste(reactiveResultsVars$rslt,sep=" - ")
+#  })
 ```
+
+```{r}
+# verbatimTextOutput("test")
+```
+
 
 * Need: stored result object, need index of latest checkin in results object, reset boundary for actual sample sizes, list of samples at all boundaries to date, list of zscores for all boundaries to date, latest zscore only, 
 * Save result
@@ -479,24 +548,37 @@ output$proportion <- renderText({
 ### Result analysis
 ```{r tableOutput, include=FALSE}
 output$resultTable <- renderTable({
-  data.frame(
+  results <- data.frame(
     times = reactiveDesignVars$table$timing,
     samples = reactiveDesignVars$table$samples,
     lower = reactiveDesignVars$table$lower,
-    upper = reactiveDesignVars$table$upper
+    upper = reactiveDesignVars$table$upper,
+    results = 0
   )
   
-})
+  try({
+    for (i in 1:length(reactiveResultsVars$rslt)) {
+      d <- reactiveResultsVars$rslt[i]
+      a <- d[[1]][1]
+      b <- d[[1]][6]
+      results[a, 5] = b
+    }
+  })
+  
+  
+  results
+}) 
 ```
 
 ```{r}
-tableOutput("resultTable")
+div(class="table", tableOutput("resultTable"))
 ```
 
 I'm not sure what this will do but I want the decision boundaries 
+
 * Approximate treatment effects at boundaries are computed dividing the Z-values at the boundaries by the square root of n.I at that analysis
 ```{r}
-plotOutput("boundPlot")
+div(class="table", plotOutput("boundPlot"))
 ```
 
 ```{r confidenceCalcFunction}
@@ -537,8 +619,6 @@ confidenceInterval <- function(Ns, Zs, xA, xB, nA, nB, ciZ, tls) {
 }
 
 ```
-
-
 
 Row
 -----------------------------
